Fixed team names not fitting in mobile games

--- a/src/app/modules/game/components/game-summary/game-summary.component.css
+++ b/src/app/modules/game/components/game-summary/game-summary.component.css
@@ -17,6 +17,7 @@
   font-size: 1.3rem;
   font-weight: 500;
   line-height: 1;
+  word-break: break-all;
 }
 
 @media screen and (max-width: 1200px) {
